main.yml (ditambah deploy)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,3 +21,28 @@ jobs:
           cache: "npm"
       - run: npm i
       - run: npm run build
+
+deploy:
+  need: test-build
+  runs-on: ubuntu-latest
+
+  strategy:
+    matrix:
+      node-version: [16x]
+
+  steps:
+    - name: Build app on VM
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secretsHOST }}
+        username: ${{ secrets.USERNAME }}
+        password: ${{ secrets.PASSWORD }}
+        port: ${{ secrers.PORT }}
+        script: |
+          eval "$(ssh-agent -s)"
+          ssh-add ~/.ssh/senpro-ssh
+          cd ~/senpro/456847/modul01/senpro-github-action
+          git restore .
+          git pull origin main
+          npm install
+          npm run build
