--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
-          port: ${{ secrers.PORT }}
+          port: ${{ secrets.PORT }}
           script: |
             eval "$(ssh-agent -s)"
             ssh-add ~/.ssh/senpro-ssh
